# plumber

./: .gitignore  Makefile  README.md  classifier_analyzer.py  main.py
analysis/: analysis_functions.py
classification/: classification_methods.py  measurement.py  measurement_utils.py
executor/: Makefile  Makefile.config  Makefile.run  Makefile.toolchain  README.md  bash
executor/all/inc/: config.h
executor/all/inc/experiment/: asm.h  nop.h
executor/all/src/: main.c
executor/board/genesys_2__cva6/: LICENSE  genesys_2__cva6.ld
executor/board/rpi3/: rpi3.ld
executor/board/rpi4/: rpi4.ld
executor/scripts/: gen_config_input.py  run_gdb.py
executor/scripts/gdb/: load.gdb
gts/: ast_attributes.py  ast_containers.py  ast_directives.py  ast_node.py  ast_operators.py  codegen.py  gts_lexer.py  gts_parser.py
matcher/: README.md
matcher/asmregex/: Match.py  README.md  prefetch.pat  previction.pat  setup.py
matcher/asmregex/asmregex/: Assembly.py  BinaryLoaderAngr.py  BinaryLoaderRadare.py  PatternGenerator.py  PatternMatcher.py  PatternParser.py  PatternPiece.py  __init__.py
matcher/dynamic/: README.md
matcher/dynamic/runner/: batch.gdb  constants.py  experiment_execution.py  lookuptable.py  main.py  relations.py  util.py
matcher/dynamic/victim-bn/: CMakeLists.txt
matcher/dynamic/victim-bn/src/: common_test.h  victim-bn.c
plumber/: classifier.template.ini  main.py
plumber/analysis/: analysis_utils.py
plumber/gts/: ast_state.py  ast_utils.py  codegen_pool.py
plumber/tests/: test_gts_lexer.py
utils/: config.py  utils.py
(+23 files in other folders)
